--- a/index.html
+++ b/index.html
@@ -2268,7 +2268,11 @@ document.getElementById('suggestionForm').addEventListener('submit', function(e)
         }
       
       </script>
+	
+      <script>
+const workerUrl = 'https://silent-mountain-f3bf.agursel.workers.dev/'
 
+      </script>
 <script>
 // =======================================================================
 //          DÜZELTİLMİŞ & GÜVENİLİR ÇEVİRİ KODU
