--- a/index.html
+++ b/index.html
@@ -1234,7 +1234,7 @@
                 <div class="flip-card h-full">
                     <div class="flip-inner h-full">
                         <div class="flip-front border-red-400">
-                            <img alt="Primal Pictures Logo" class="product-image" src="assets/images/primalpictures_logo.webp" loading="lazy" />
+                            <img alt="Primal Pictures Logo" class="product-image" src="assets/images/primalpictures_logo.svg" loading="lazy" />
                             <h3 class="text-xl font-semibold text-center text-primary translatable">Primal Pictures</h3>
                             <div class="badge-container">
                                 <span class="badge-label translatable">Yetkili Bölge:</span>
