--- a/index.html
+++ b/index.html
@@ -1734,7 +1734,7 @@
                     <li class="glide__slide"><img src="assets/images/medicitv_logo.webp" alt="Medici.tv Logo" class="partner-logo" loading="lazy"></li>
                     <li class="glide__slide"><img src="assets/images/biorender_logo.png" alt="BioRender Logo" class="partner-logo" loading="lazy"></li>
                     <li class="glide__slide"><img src="assets/images/wiley_logo.svg" alt="Wiley Logo" class="partner-logo" loading="lazy"></li>
-                    <li class="glide__slide"><img src="assets/images/Transleyt_LOGO.PNG" alt="Transleyt Logo" class="partner-logo" loading="lazy"></li>
+                    <li class="glide__slide"><img src="assets/images/aicoor_logo.webp" alt="Aicoor Logo" class="partner-logo" loading="lazy"></li>
                 </ul>
             </div>
         </div>
