--- a/index.html
+++ b/index.html
@@ -1347,165 +1347,6 @@ document.getElementById('suggestionForm').addEventListener('submit', function(e)
     </div>
   </div>
 
-
-  <script>
-    function openModal() {
-      document.getElementById('trialModal').classList.remove('hidden');
-      document.body.classList.add('no-scroll');
-    }
-    function closeModal() {
-      document.getElementById('trialModal').classList.add('hidden');
-      document.body.classList.remove('no-scroll');
-    }
-  
-    function openSuggestionModal() {
-      document.getElementById('suggestionModal').classList.remove('hidden');
-      document.body.classList.add('no-scroll');
-    }
-  
-    function closeSuggestionModal() {
-      document.getElementById('suggestionModal').classList.add('hidden');
-      document.body.classList.remove('no-scroll');
-    }
-  </script>
-  
-  <script>
-    function toggleDropdown(button) {
-      const list = button.nextElementSibling;
-      list.classList.toggle('hidden');
-      const icon = button.querySelector('i');
-      icon.classList.toggle('fa-chevron-down');
-      icon.classList.toggle('fa-chevron-up');
-    }
-  </script>
-     <script>
-        function toggleProductsMenu() {
-          const menu = document.getElementById('mobile-products');
-          menu.classList.toggle('hidden');
-      
-          const icon = document.querySelector('#products-menu-toggle i');
-          if (icon) {
-            icon.classList.toggle('fa-chevron-down');
-            icon.classList.toggle('fa-chevron-up');
-          }
-        }
-      
-      </script>
-
-<script>
-// =======================================================================
-//          CLOUDFLARE WORKER UYUMLU ÇEVİRİ KODU
-// =======================================================================
-
-document.addEventListener('DOMContentLoaded', function() {
-    const translateButton = document.getElementById('translateBtn');
-    const originalTexts = new Map();
-    let isTranslated = false;
-    const workerUrl = 'https://silent-mountain-f3bf.agursel.workers.dev/'; // Size verilen Worker URL'si
-
-    // Sayfa ilk yüklendiğinde buton metnini ayarla
-    translateButton.innerText = 'English';
-
-    // Orijinal metinleri sadece bir kez topla ve sakla
-    const collectAndStoreOriginalTexts = () => {
-        if (originalTexts.size === 0) {
-            const elements = document.querySelectorAll('.translatable');
-            elements.forEach(el => {
-                // Elementin kendisini anahtar, temizlenmiş metnini değer olarak sakla
-                originalTexts.set(el, el.innerText.trim());
-            });
-        }
-    };
-
-    // Saklanan orijinal metinlere geri dön
-    const revertToOriginal = () => {
-        originalTexts.forEach((text, el) => {
-            el.innerText = text;
-        });
-    };
-
-    // Tüm metinleri Cloudflare Worker kullanarak çevir
-    const translateAllTexts = async (targetLanguage) => {
-        collectAndStoreOriginalTexts();
-
-        const elementsToTranslate = Array.from(originalTexts.keys());
-        const translationPromises = []; // Tüm çeviri isteklerini tutacak dizi
-
-        for (const el of elementsToTranslate) {
-            const originalText = originalTexts.get(el);
-
-            // Eğer metin boşsa çeviri isteği yapma
-            if (!originalText) {
-                continue;
-            }
-
-            // Her bir metin için ayrı bir çeviri isteği oluştur ve diziye ekle
-            const promise = fetch(`${workerUrl}?text=${encodeURIComponent(originalText)}&target=${targetLanguage}`)
-                .then(res => {
-                    if (!res.ok) {
-                        throw new Error(`Server error: ${res.status}`);
-                    }
-                    return res.json();
-                })
-                .then(data => {
-                    if (data.error) {
-                        // Bir hata varsa, orijinal metni koru
-                        console.error('Translation error:', data.error);
-                        return originalText;
-                    }
-                    // Başarılı çeviriyi döndür
-                    return data.data.translations[0].translatedText;
-                })
-                .catch(err => {
-                    // İstek sırasında hata olursa orijinal metni koru
-                    console.error('Fetch error:', err.message);
-                    return originalText; // Hata durumunda orijinal metni kullan
-                });
-
-            translationPromises.push(promise);
-        }
-
-        try {
-            // Tüm çeviri isteklerinin tamamlanmasını bekle
-            const translatedTexts = await Promise.all(translationPromises);
-
-            // Sonuçları ilgili elementlere yazdır
-            elementsToTranslate.forEach((el, index) => {
-                // Çevirisi yapılamayan (boş olanlar atlandığı için)
-                // veya hata alan metinler orijinal kalacağından,
-                // burada sadece başarılı olanlar güncellenir.
-                if(translatedTexts[index]){
-                   el.innerText = translatedTexts[index];
-                }
-            });
-
-        } catch (error) {
-            console.error('An error occurred during translations:', error);
-            alert('Çeviri hizmeti şu an kullanılamıyor. Lütfen daha sonra tekrar deneyin.');
-            revertToOriginal(); // Herhangi bir büyük hata durumunda tüm metinleri geri al
-        }
-    };
-
-    // Çeviri butonuna tıklama olayını dinle
-    translateButton.addEventListener('click', async function() {
-        translateButton.innerText = 'Yükleniyor...';
-        translateButton.disabled = true;
-
-        if (!isTranslated) {
-            await translateAllTexts('en'); // İngilizce'ye çevir
-            translateButton.innerText = 'Türkçe';
-            isTranslated = true;
-        } else {
-            revertToOriginal(); // Orijinal dile (Türkçe) geri dön
-            translateButton.innerText = 'English';
-            isTranslated = false;
-        }
-
-        translateButton.disabled = false;
-    });
-});
-</script>
-
 <div id="mapModal" class="fixed inset-0 bg-black bg-opacity-75 flex items-center justify-center z-50 hidden">
   <div class="bg-white rounded-lg p-4 w-full max-w-4xl h-[80vh] relative">
     <button onclick="closeMapModal()" class="absolute top-2 right-2 text-gray-700 hover:text-primary z-10">
@@ -1527,7 +1368,7 @@ document.addEventListener('DOMContentLoaded', function() {
     </div>
   </div>
 </div>
-
+<script src="script.js" defer></script>
 </body>
 
 </html>
