--- a/index.html
+++ b/index.html
@@ -257,14 +257,14 @@
         <h2 class="products-header translatable">Ürünler</h2>
         <div class="subject-filter-container mb-8">
             <div class="filter-container" id="subject-filter">
-                <button class="subject-btn active" data-subject="all" aria-pressed="true" class="translatable">Tümü</button>
-                <button class="subject-btn" data-subject="fen-matematik" aria-pressed="false" class="translatable">Fen & Matematik</button>
-                <button class="subject-btn" data-subject="muhendislik" aria-pressed="false" class="translatable">Mühendislik</button>
-                <button class="subject-btn" data-subject="saglik" aria-pressed="false" class="translatable">Sağlık</button>
-                <button class="subject-btn" data-subject="sosyal-bilimler" aria-pressed="false" class="translatable">Sosyal Bilimler</button>
-                <button class="subject-btn" data-subject="is-hukuk" aria-pressed="false" class="translatable">İş & Hukuk</button>
-                <button class="subject-btn" data-subject="sanat" aria-pressed="false" class="translatable">Sanat</button>
-                <button class="subject-btn" data-subject="yapay-zeka" aria-pressed="false" class="translatable">Yapay Zeka</button>
+                <button class="subject-btn active translatable" data-subject="all" aria-pressed="true">Tümü</button>
+                <button class="subject-btn translatable" data-subject="fen-matematik" aria-pressed="false">Fen & Matematik</button>
+                <button class="subject-btn translatable" data-subject="muhendislik" aria-pressed="false">Mühendislik</button>
+                <button class="subject-btn translatable" data-subject="saglik" aria-pressed="false">Sağlık</button>
+                <button class="subject-btn translatable" data-subject="sosyal-bilimler" aria-pressed="false">Sosyal Bilimler</button>
+                <button class="subject-btn translatable" data-subject="is-hukuk" aria-pressed="false">İş & Hukuk</button>
+                <button class="subject-btn translatable" data-subject="sanat" aria-pressed="false">Sanat</button>
+                <button class="subject-btn translatable" data-subject="yapay-zeka" aria-pressed="false">Yapay Zeka</button>
             </div>
         </div>
         <div class="tools-grid" id="products-grid">
@@ -807,7 +807,7 @@
                 <div>
                     <h3 class="text-xl font-semibold text-primary mb-2 translatable">Erişim ve Entegrasyon Desteği</h3>
                     <p class="text-sm translatable">
-                        Kaynakların kurumunuzın sistemlerine entegrasyonu, uzaktan erişim ayarları ve teknik sorun giderme konularında destek sağlıyoruz.
+                        Kaynakların kurumunuzun sistemlerine entegrasyonu, uzaktan erişim ayarları ve teknik sorun giderme konularında destek sağlıyoruz.
                     </p>
                 </div>
                 <div>
