--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
                 <a class="hover:text-primary translatable" href="#announcements">Duyurular</a>
 
 <button id="translateBtn" class="bg-primary text-white px-4 py-2 rounded-md hover:bg-opacity-90 transition-all duration-300 flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-purple-300 text-sm font-semibold" aria-label="Change Language">
-    </button>
+    English
+</button>
             </div>
         </div>
     </nav>
