--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
     </button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/glide.min.js"></script>
-    <script src="script.js"></script>
+    <script src="/assets/js/script.js"></script>
 
     
     <div id="trialModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
