--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 
 
 <div class="relative group">
-    <a id="products-menu-toggle" onclick="toggleProductsMenu()" class="hover:text-primary font-semibold flex items-center cursor-pointer sm:cursor-default translatable">
-Ürünler</span>
-      <i class="fas fa-chevron-down ml-1 text-xs"></i>
-    </a>
+<a id="products-menu-toggle" onclick="toggleProductsMenu()" class="hover:text-primary font-semibold flex items-center cursor-pointer sm:cursor-default">
+  <span class="translatable">Ürünler</span>
+  <i class="fas fa-chevron-down ml-1 text-xs"></i>
+</a>
   
     <div class="dropdown absolute left-0 mt-2 bg-white shadow-lg rounded-lg z-20 p-4 space-y-4 w-[340px] hidden sm:block">
       <div>
