--- a/index.html
+++ b/index.html
@@ -979,8 +979,8 @@
         <span class="sr-only translatable">Back to top</span>
     </button>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/glide.min.js"></script>
-    <script src="/assets/js/script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/glide.min.js"></script>
+<script src="assets/js/script.js"></script>
 
     
     <div id="trialModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
