--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     </div>
 
     <div class="hero-content">
-        <h1 class="hero-header translatable"><span class="lib-bold">Lib</span><span class="font-normal">Edge ile Bilginin Gücünü Keşfedin</span>
+        <h1 class="hero-header translatable"><span class="font-normal">Bilginin Gücünü Keşfedin</span>
         </h1>
         <p class="hero-subtitle translatable">Kalite ve dürüstlük ilkesi ile 20 yıla yakın sektör deneyimini harmanlıyoruz. Kütüphanelere ürün danışmanlığı, abonelik süreç desteği ve yerinde eğitim hizmetleri sunuyoruz.</p>
     </div>
