--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </button>
         
         <button onclick="openSuggestionModal()" class="hero-badge translatable">
-            <i class="fas fa-lightbulb mr-2"></i>Ürün Öneriniz Var mı?</button>
+            </i>Ürün Öneriniz Var mı?</button>
     </div>
 
     <div class="hero-content">
