--- a/index.html
+++ b/index.html
@@ -234,14 +234,17 @@
 
 <main class="hero-container relative"> <video class="hero-video" src="assets/videos/library.mp4" autoplay muted loop playsinline aria-hidden="true" role="presentation"></video>
 
-    <div class="hero-badges-wrapper">
-        <button onclick="openModal()" class="hero-badge translatable">
-            <i class="fas fa-ticket-alt mr-2"></i> Deneme Erişimi İsteği
-        </button>
-        
-        <button onclick="openSuggestionModal()" class="hero-badge translatable">
-            </i>Ürün Öneriniz Var mı?</button>
-    </div>
+<div class="hero-badges-wrapper">
+    <button onclick="openModal()" class="hero-badge translatable">
+        <i class="fas fa-ticket-alt mr-2" aria-hidden="true"></i>
+        <span>Deneme Erişimi İsteği</span>
+    </button>
+    
+    <button onclick="openSuggestionModal()" class="hero-badge translatable">
+        <i class="fas fa-lightbulb mr-2" aria-hidden="true"></i>
+        <span>Ürün Öneriniz Var mı?</span>
+    </button>
+</div>
 
     <div class="hero-content">
         <h1 class="hero-header translatable"><span class="font-normal">Bilginin Gücünü Keşfedin</span>
