--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   
       <div>
         <h4 class="text-sm font-bold text-primary mb-1 translatable">İş & Hukuk</h4>
-        <a href="#jove-dergiler" class="block px-2 py-1 text-sm hover:text-primary translatable">JoVE Research</a>
+        <a href="#jove-business" class="block px-2 py-1 text-sm hover:text-primary translatable">JoVE Business</a>
       </div>
   
       <div>
@@ -439,7 +439,7 @@
                 </div>
             </div>
 
-            <div class="product-card-container" data-subjects="fen-matematik,is-hukuk,muhendislik,saglik,sosyal-bilimler" id="jove-dergiler">
+            <div class="product-card-container" data-subjects="fen-matematik,muhendislik,saglik,sosyal-bilimler" id="jove-dergiler">
                 <div class="flip-card h-full">
                     <div class="flip-inner h-full">
                         <div class="flip-front border-teal-400">
@@ -466,7 +466,7 @@
                                 </ul>
                                 <div class="mt-auto flex justify-center space-x-4">
                                     <a href="#brochures" class="bg-primary text-white py-2 px-4 rounded-lg hover:bg-opacity-90 transition text-xs translatable">Broşür</a>
-                                    <a href="https://www.jove.com/methods" target="_blank" class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition text-xs whitespace-nowrap translatable">Erişim Linki</a>
+                                    <a href="https://app.jove.com/research" target="_blank" class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition text-xs whitespace-nowrap translatable">Erişim Linki</a>
                                 </div>
                             </div>
                         </div>
@@ -475,7 +475,7 @@
                 </div>
             </div>
 
-            <div class="product-card-container" data-subjects="fen-matematik,is-hukuk,muhendislik,saglik,sosyal-bilimler" id="jove-education">
+            <div class="product-card-container" data-subjects="fen-matematik,muhendislik,saglik,sosyal-bilimler" id="jove-education">
                 <div class="flip-card h-full">
                     <div class="flip-inner h-full">
                         <div class="flip-front border-teal-400">
@@ -496,7 +496,35 @@
                             </ul>
                             <div class="flex justify-center space-x-4 mt-auto">
                                 <a href="#brochures" class="bg-primary text-white py-2 px-4 rounded-lg hover:bg-opacity-90 transition text-xs translatable">Broşür</a>
-                                <a href="https://www.jove.com/science-education" target="_blank" class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition text-xs whitespace-nowrap translatable">Erişim Linki</a>
+                                <a href="https://app.jove.com/education" target="_blank" class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition text-xs whitespace-nowrap translatable">Erişim Linki</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+                        <div class="product-card-container" data-subjects="business-law" id="jove-business">
+                <div class="flip-card h-full">
+                    <div class="flip-inner h-full">
+                        <div class="flip-front border-teal-400">
+                            <img alt="JoVE Education Logo" class="product-image" src="assets/images/JOVE_LOGO.PNG" loading="lazy" />
+                            <h3 class="text-xl font-semibold text-center text-primary translatable">JoVE Business</h3>
+                            <div class="badge-container">
+                                <span class="badge-label translatable">Yetkili Bölge:</span>
+                                <span class="badge-turkey translatable">Türkiye</span>
+                                <span class="badge-middleeast invisible translatable">Orta Doğu</span>
+                            </div>
+                        </div>
+                        <div class="flip-back bg-teal-50">
+                            <h4 class="text-lg font-bold mb-3 text-teal-800 translatable">JoVE Business</h4>
+                            <ul class="text-xs text-black space-y-1 mb-4">
+                                <li class="translatable">✔ İşletme ve yönetim odaklı video içeriği</li>
+                                <li class="translatable">✔ Finans, Pazarlama, Mikroekonomi</li>
+                                <li class="translatable">✔ Animasyonlu dersler</li>
+                            </ul>
+                            <div class="flex justify-center space-x-4 mt-auto">
+                                <a href="#brochures" class="bg-primary text-white py-2 px-4 rounded-lg hover:bg-opacity-90 transition text-xs translatable">Broşür</a>
+                                <a href="https://www.jove.com/business" target="_blank" class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition text-xs whitespace-nowrap translatable">Erişim Linki</a>
                             </div>
                         </div>
                     </div>
