--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                 </div>
             </div>
 
-                        <div class="product-card-container" data-subjects="business-law" id="jove-business">
+                        <div class="product-card-container" data-subjects="is-hukuk,business" id="jove-business">
                 <div class="flip-card h-full">
                     <div class="flip-inner h-full">
                         <div class="flip-front border-teal-400">
