--- a/index.html
+++ b/index.html
@@ -1069,15 +1069,13 @@
       <i class="fas fa-times text-2xl"></i>
     </button>
     <div class="h-full w-full">
-      <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3124.457155130228!2d27.173918925451982!3d38.45400597274505!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14b962a99e0f38dd%3A0x35867df27d9167ae!2sDaire%3A%202617%2C%20Adalet%2C%20Manas%20Blv.%20No%3A%2047%2FB%2C%2035530%20Bayrakl%C4%B1%2F%C4%B0zmir!5e0!3m2!1str!2str!4v1689923024245!5m2!1str!2str" 
-        width="100%" 
-        height="100%" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3124.949821415372!2d27.18873737626942!3d38.4416180717277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14b9623ce16117d3%3A0x863c1b9862595a82!2sFolkart%20Towers!5e0!3m2!1str!2str!4v1725902992928!5m2!1str!2str" 
+    width="100%" 
+    height="100%" 
+    style="border:0;" 
+    allowfullscreen="" 
+    loading="lazy" 
+    referrerpolicy="no-referrer-when-downgrade">
     </div>
     <div class="mt-2 text-center text-sm text-gray-600 translatable">
       LibEdge ||| Daire: 2617, Adalet, Manas Blv. No: 47/B, 35530 Bayraklı/İzmir
