--- a/index.html
+++ b/index.html
@@ -1069,15 +1069,7 @@
       <i class="fas fa-times text-2xl"></i>
     </button>
     <div class="h-full w-full">
- <iframe 
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3124.949821415372!2d27.18873737626942!3d38.4416180717277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14b9623ce16117d3%3A0x863c1b9862595a82!2sFolkart%20Towers!5e0!3m2!1str!2str!4v1725902992928!5m2!1str!2str" 
-    width="100%" 
-    height="100%" 
-    style="border:0;" 
-    allowfullscreen="" 
-    loading="lazy" 
-    referrerpolicy="no-referrer-when-downgrade">
-</iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6248.890749726966!2d27.166892793579095!3d38.454277999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14bbd7ff8a83562b%3A0xcabe31e138901273!2seOfis%20-%20%C4%B0zmir%20Folkart%20Towers!5e0!3m2!1str!2str!4v1757432797541!5m2!1str!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div class="mt-2 text-center text-sm text-gray-600 translatable">
       LibEdge ||| Daire: 2617, Adalet, Manas Blv. No: 47/B, 35530 Bayraklı/İzmir
