--- a/index.html
+++ b/index.html
@@ -1064,12 +1064,12 @@
   
 
 <div id="mapModal" class="fixed inset-0 bg-black bg-opacity-75 flex items-center justify-center z-50 hidden">
-  <div class="bg-white rounded-lg p-4 w-full max-w-4xl h-[80vh] relative">
+  <div class="bg-white rounded-lg p-4 w-full max-w-4xl h-[80vh] relative flex flex-col">
     <button onclick="closeMapModal()" class="absolute top-2 right-2 text-gray-700 hover:text-primary z-10">
       <i class="fas fa-times text-2xl"></i>
     </button>
-    <div class="h-full w-full">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1532.7842603417387!2d27.170460398322055!3d38.455246734139886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14bb98d360155a01%3A0x1d61c6b3ef9a77ce!2sLibEdge!5e0!3m2!1str!2str!4v1725902095038!5m2!1str!2str" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="flex-grow w-full">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3124.6068212132333!2d27.16109967657904!3d38.45547637179045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14bb92b450c05565%3A0x6b7721832049f537!2sLibEdge!5e0!3m2!1str!2str!4v1726055106140!5m2!1str!2str" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div class="mt-2 text-center text-sm text-gray-600 translatable">
       LibEdge ||| Daire: 2617, Adalet, Manas Blv. No: 47/B, 35530 Bayraklı/İzmir
