--- a/index.html
+++ b/index.html
@@ -161,7 +161,10 @@
       <a href="#lecturio" class="block text-gray-700 translatable">Lecturio</a>
       <a href="#nejmhealer" class="block text-gray-700 translatable">NEJMHealer</a>
       <a href="#accessmedical" class="block text-gray-700 translatable">AccessMedical</a>
+      <a href="#biorender" class="block text-gray-700 translatable">BioRender</a>
       <a href="#cochrane-library" class="block text-gray-700 translatable">Cochrane Library</a>
+      <a href="#wiley-dergiler" class="block text-gray-700 translatable">Wiley Dergiler</a>
+      <a href="#wiley-kitaplar" class="block text-gray-700 translatable">Wiley Kitaplar</a>
     </div>
   </div>
   
@@ -172,6 +175,8 @@
     <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
       <a href="#accessengineering" class="block text-gray-700 translatable">AccessEngineering</a>
       <a href="#biorender" class="block text-gray-700 translatable">BioRender</a>
+      <a href="#jove-dergiler" class="block text-gray-700 translatable">JoVE Research</a>
+      <a href="#jove-education" class="block text-gray-700 translatable">JoVE Education</a>
       <a href="#wiley-dergiler" class="block text-gray-700 translatable">Wiley Dergiler</a>
       <a href="#wiley-kitaplar" class="block text-gray-700 translatable">Wiley Kitaplar</a>
     </div>
@@ -204,7 +209,7 @@
       <span class="translatable">İş & Hukuk</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
     </button>
     <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
-      <a href="#jove-dergiler" class="block text-gray-700 translatable">JoVE Research</a>
+      <a href="#jove-business" class="block px-2 py-1 text-sm hover:text-primary translatable">JoVE Business</a>
     </div>
   </div>
   
@@ -235,7 +240,7 @@
 <main class="hero-container relative"> <video class="hero-video" src="assets/videos/library.mp4" autoplay muted loop playsinline aria-hidden="true" role="presentation"></video>
 
 <div class="hero-badges-wrapper">
-    <button onclick="openModal()" class="hero-badge translatable">
+    <button onclick="openModal()" class="hero-badge translatable" aria-label="Ürün önerisi gönder">
         <i class="fas fa-ticket-alt mr-2" aria-hidden="true"></i>
         <span>Deneme Erişimi İsteği</span>
     </button>
@@ -876,7 +881,7 @@
             <div class="glide__track" data-glide-el="track">
                 <ul class="glide__slides">
                     <li class="glide__slide"><img src="assets/images/pangram_logo.webp" alt="Pangram Logo" class="partner-logo" loading="lazy"></li>
-                    <li class="glide__slide"><img src="assets/images/ChatPDF_LOGO.JPEG" alt="ChatPDF Logo" class="partner-logo" loading="lazy"></li>
+                    <li class="glide__slide"><img src="assets/images/ChatPDF_LOGO.webp" alt="ChatPDF Logo" class="partner-logo" loading="lazy"></li>
                     <li class="glide__slide"><img src="assets/images/wonders_logo.svg" alt="Wonders Logo" class="partner-logo" loading="lazy"></li>
                     <li class="glide__slide"><img src="assets/images/primalpictures_logo.svg" alt="Primal Pictures Logo" class="partner-logo" loading="lazy"></li>
                     <li class="glide__slide"><img src="assets/images/Lecturio_logo.PNG" alt="Lecturio Logo" class="partner-logo" loading="lazy"></li>
