--- a/index.html
+++ b/index.html
@@ -861,8 +861,8 @@
                     <p class="text-gray-600 italic mb-4 translatable">
                         "LibEdge ile çalışmak işlerimizi çok kolaylaştırdı. Hızlı yanıtları ve çözüm odaklı yaklaşımları sayesinde ihtiyaçlarımıza en uygun kaynaklara ulaştık."
                     </p>
-                    <p class="text-right font-semibold text-primary translatable">- [Müşteri Adı/Unvanı]</p>
-                    <p class="text-right text-sm text-gray-600 translatable">[Kurum Adı]</p>
+                    <p class="text-right font-semibold text-primary translatable">- Kenan Öztop/Kütüphane Müdürü</p>
+                    <p class="text-right text-sm text-gray-600 translatable">İstanbul Okan Üniversitesi</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <p class="text-gray-600 italic mb-4 translatable">
