--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.theme.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -840,7 +841,7 @@
                 <div>
                     <h3 class="text-xl font-semibold text-primary mb-2 translatable">Erişim ve Entegrasyon Desteği</h3>
                     <p class="text-sm translatable">
-                        Kaynakların kurumunuzın sistemlerine entegrasyonu, uzaktan erişim ayarları ve teknik sorun giderme konularında destek sağlıyoruz.
+                        Kaynakların kurumunuzun sistemlerine entegrasyonu, uzaktan erişim ayarları ve teknik sorun giderme konularında destek sağlıyoruz.
                     </p>
                 </div>
                 <div>
@@ -877,7 +878,8 @@
 
     <section class="max-w-7xl mx-auto px-6 py-8" id="partners">
         <h2 class="products-header translatable">İş Ortakları</h2>
-        <div class="glide">
+      <!--
+  <div class="glide">
             <div class="glide__track" data-glide-el="track">
                 <ul class="glide__slides">
                     <li class="glide__slide"><img src="assets/images/pangram_logo.webp" alt="Pangram Logo" class="partner-logo" loading="lazy"></li>
@@ -892,8 +894,84 @@
                     <li class="glide__slide"><img src="assets/images/wiley_logo.svg" alt="Wiley Logo" class="partner-logo" loading="lazy"></li>
                     <li class="glide__slide"><img src="assets/images/aicoor_logo.webp" alt="Aicoor Logo" class="partner-logo" loading="lazy"></li>
                 </ul>
+            </div> 
+        </div>-->
+<!-- Modern Marquee Implementation -->
+<div class="modern-marquee">
+    <div class="marquee-container">
+        <div class="marquee-track">
+            <!-- İlk set -->
+            <div class="marquee-item">
+                <img src="assets/images/pangram_logo.webp" alt="Pangram Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/ChatPDF_LOGO.webp" alt="ChatPDF Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/wonders_logo.svg" alt="Wonders Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/primalpictures_logo.svg" alt="Primal Pictures Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/Lecturio_logo.PNG" alt="Lecturio Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/JOVE_LOGO.PNG" alt="JoVE Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/mcgraw-hill_logo.svg" alt="AccessMedical Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/medicitv_logo.webp" alt="Medici.tv Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/biorender_logo.png" alt="BioRender Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/wiley_logo.svg" alt="Wiley Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/aicoor_logo.webp" alt="Aicoor Logo" class="partner-logo" loading="lazy">
+            </div>
+            
+            <!-- Aynı seti tekrarla (kesintisiz döngü için) -->
+            <div class="marquee-item">
+                <img src="assets/images/pangram_logo.webp" alt="Pangram Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/ChatPDF_LOGO.webp" alt="ChatPDF Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/wonders_logo.svg" alt="Wonders Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/primalpictures_logo.svg" alt="Primal Pictures Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/Lecturio_logo.PNG" alt="Lecturio Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/JOVE_LOGO.PNG" alt="JoVE Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/mcgraw-hill_logo.svg" alt="AccessMedical Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/medicitv_logo.webp" alt="Medici.tv Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/biorender_logo.png" alt="BioRender Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/wiley_logo.svg" alt="Wiley Logo" class="partner-logo" loading="lazy">
+            </div>
+            <div class="marquee-item">
+                <img src="assets/images/aicoor_logo.webp" alt="Aicoor Logo" class="partner-logo" loading="lazy">
             </div>
         </div>
+    </div>
+</div>
     </section>
 
 <section class="py-16 px-4 bg-gray-50 dark:bg-gray-800" id="contact">
@@ -957,7 +1035,7 @@
                         <input type="email" name="email" id="email" autocomplete="email" required
                              class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-indigo-600 dark:focus:border-indigo-600 transition duration-150 ease-in-out">
                     </div>
-                    <div>
+                                       <div>
                         <label for="phone" class="block text-sm font-medium text-gray-700 dark:text-gray-300 translatable">Telefon Numaranız (İsteğe Bağlı)</label>
                         <input type="tel" name="phone" id="phone" autocomplete="tel"
                              class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-indigo-600 dark:focus:border-indigo-600 transition duration-150 ease-in-out">
