--- a/index.html
+++ b/index.html
@@ -867,12 +867,20 @@
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <p class="text-gray-600 italic mb-4 translatable">
-                        "Sağladıkları eğitimler çok faydalı oldu. Kullanıcılarımız artık kaynakları daha etkin kullanabiliyor. LibEdge ekibine teşekkür ederiz."
+                        "Hizmete sunduğu kaynakların yanı sıra yeni ürünlerle ilgili danışmanlık ve yenilikçi çözümler sunma anlayışında olması nedeniyle LibEdge firması ile çalışmak her zaman avantajlı."
                     </p>
-                    <p class="text-right font-semibold text-primary translatable">- [Müşteri Adı/Unvanı]</p>
-                    <p class="text-right text-sm text-gray-600 translatable">[Kurum Adı]</p>
+                    <p class="text-right font-semibold text-primary translatable">- Aykut Bayraktar/Birim Sorumlusu</p>
+                    <p class="text-right text-sm text-gray-600 translatable">Bursa Uludağ Üniversitesi</p>
                 </div>
             </div>
+                            <div class="bg-white p-6 rounded-lg shadow-md">
+                    <p class="text-gray-600 italic mb-4 translatable">
+                        "Sağladıkları eğitimler çok faydalı oldu. Kullanıcılarımız artık kaynakları daha etkin kullanabiliyor. LibEdge ekibine teşekkür ederiz."
+
+                    </p>
+                    <p class="text-right font-semibold text-primary translatable">- .../...</p>
+                    <p class="text-right text-sm text-gray-600 translatable">...</p>
+                </div>
         </div>
     </section>
 
