--- a/index.html
+++ b/index.html
@@ -854,35 +854,39 @@
         </div>
     </section>
 
-    <section class="bg-gray-100 px-6 py-8" id="testimonials">
-        <div class="max-w-7xl mx-auto">
-            <h2 class="products-header translatable">Müşteri Görüşleri</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <p class="text-gray-600 italic mb-4 translatable">
-                        "LibEdge ile çalışmak işlerimizi çok kolaylaştırdı. Hızlı yanıtları ve çözüm odaklı yaklaşımları sayesinde ihtiyaçlarımıza en uygun kaynaklara ulaştık."
-                    </p>
-                    <p class="text-right font-semibold text-primary translatable">- Kenan Öztop/Kütüphane Müdürü</p>
-                    <p class="text-right text-sm text-gray-600 translatable">İstanbul Okan Üniversitesi</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <p class="text-gray-600 italic mb-4 translatable">
-                        "Hizmete sunduğu kaynakların yanı sıra yeni ürünlerle ilgili danışmanlık ve yenilikçi çözümler sunma anlayışında olması nedeniyle LibEdge firması ile çalışmak her zaman avantajlı."
-                    </p>
-                    <p class="text-right font-semibold text-primary translatable">- Aykut Bayraktar/Birim Sorumlusu</p>
-                    <p class="text-right text-sm text-gray-600 translatable">Bursa Uludağ Üniversitesi</p>
-                </div>
-            </div>
-                            <div class="bg-white p-6 rounded-lg shadow-md">
-                    <p class="text-gray-600 italic mb-4 translatable">
-                        "Sağladıkları eğitimler çok faydalı oldu. Kullanıcılarımız artık kaynakları daha etkin kullanabiliyor. LibEdge ekibine teşekkür ederiz."
+<section class="bg-gray-100 px-6 py-8" id="testimonials">
+  <div class="max-w-7xl mx-auto">
+    <h2 class="products-header translatable">Müşteri Görüşleri</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+      <!-- Görüş 1 -->
+      <div class="bg-white p-6 rounded-lg shadow-md">
+        <p class="text-gray-600 italic mb-4 translatable">
+          "LibEdge ile çalışmak işlerimizi çok kolaylaştırdı. Hızlı yanıtları ve çözüm odaklı yaklaşımları sayesinde ihtiyaçlarımıza en uygun kaynaklara ulaştık."
+        </p>
+        <p class="text-right font-semibold text-primary translatable">- Kenan Öztop/Kütüphane Müdürü</p>
+        <p class="text-right text-sm text-gray-600 translatable">İstanbul Okan Üniversitesi</p>
+      </div>
 
-                    </p>
-                    <p class="text-right font-semibold text-primary translatable">- .../...</p>
-                    <p class="text-right text-sm text-gray-600 translatable">...</p>
-                </div>
-        </div>
-    </section>
+      <!-- Görüş 2 -->
+      <div class="bg-white p-6 rounded-lg shadow-md">
+        <p class="text-gray-600 italic mb-4 translatable">
+          "Hizmete sunduğu kaynakların yanı sıra yeni ürünlerle ilgili danışmanlık ve yenilikçi çözümler sunma anlayışında olması nedeniyle LibEdge firması ile çalışmak her zaman avantajlı."
+        </p>
+        <p class="text-right font-semibold text-primary translatable">- Aykut Bayraktar/Birim Sorumlusu</p>
+        <p class="text-right text-sm text-gray-600 translatable">Bursa Uludağ Üniversitesi</p>
+      </div>
+
+      <!-- Görüş 3 -->
+      <div class="bg-white p-6 rounded-lg shadow-md">
+        <p class="text-gray-600 italic mb-4 translatable">
+          "Sağladıkları eğitimler çok faydalı oldu. Kullanıcılarımız artık kaynakları daha etkin kullanabiliyor. LibEdge ekibine teşekkür ederiz."
+        </p>
+        <p class="text-right font-semibold text-primary translatable">- .../...</p>
+        <p class="text-right text-sm text-gray-600 translatable">...</p>
+      </div>
+    </div>
+  </div>
+</section>
 
     <section class="max-w-7xl mx-auto px-6 py-8" id="partners">
         <h2 class="products-header translatable">İş Ortakları</h2>
