--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                 <div class="flip-card h-full">
                     <div class="flip-inner h-full">
                         <div class="flip-front border-red-400">
-                            <img alt="BioRender Logo" class="product-image" src="assets/images/biorender_logo.png" loading="lazy" />
+                            <img alt="BioRender Logo" class="product-image" src="assets/images/biorender_logo.webp" loading="lazy" />
                             <h3 class="text-xl font-semibold text-center text-primary translatable">BioRender</h3>
                             <div class="badge-container">
                                 <span class="badge-label translatable">Yetkili Bölge:</span>
@@ -944,7 +944,7 @@
                         <a href="https://medici.tv/" target="_blank" class="partner-link">Medici.tv'ye Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/biorender_logo.png" alt="BioRender Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/biorender_logo.webp" alt="BioRender Logo" class="partner-logo" loading="lazy">
                         <a href="https://www.biorender.com/" target="_blank" class="partner-link">BioRender'a Git</a>
                     </div>
                     <div class="marquee-item">
